adicionando fontes de texto,mudando o botao e background

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ p {
 }
 .botao {
   display: inline-block;
-  background: #ff523b;
+  background: #4e69e4;
   color: #ffffff;
   padding: 8px 30px;
   margin: 30px 0;
