--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  font-family: "Poppins", sans-serif;
+}
 .navbar {
   display: flex;
   align-items: center;
@@ -59,7 +62,14 @@ p {
   padding: 8px 30px;
   margin: 30px 0;
   border-radius: 30px;
+  transition: 0.5s;
+}
+.botao:hover {
+  background: #141142;
 }
 .header {
   background: radial-gradient(#fff, #04d3f3);
+}
+.header .row {
+  margin-top: 70px;
 }
